--- a/app/js/components/ui/OperationButton/style.scss
+++ b/app/js/components/ui/OperationButton/style.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.5em;
+  padding: 0.5rem;
   border-radius: 10px;
 }
 
