--- a/app/js/components/views/Layout/style.scss
+++ b/app/js/components/views/Layout/style.scss
@@ -1,5 +1,14 @@
 .layoutContainer {
+  display: flex;
   position: absolute;
   height: 100%;
   width: 100%;
 }
+
+.margin {
+  position: relative;
+  margin: 20px;
+  display: flex;
+  flex-grow: 1;
+}
+
