--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,9 +22,13 @@ input[type="text"], input[type="password"] {
   appearance: none;
   box-shadow: none;
   border-radius: none;
-
+  box-sizing: border-box;
 }
 
 input[type="text"]:focus, input[type="password"]:focus {
   outline: none;
+}
+
+div {
+  box-sizing: border-box;
 }
