--- a/app/js/components/views/Layout/style.scss
+++ b/app/js/components/views/Layout/style.scss
@@ -1,13 +1,10 @@
 .layoutContainer {
-  position: absolute;
-  height: 100%;
-  width: 100%;
+  //height: 100%;
+  //width: 100%;
+  //box-sizing: border-box;
+  //margin: 20px;
 }
 
-.margin {
-  position: relative;
-  margin: 20px;
-  display: flex;
-  flex-grow: 1;
+.content {
+  padding: 50px;
 }
-
