--- a/app/js/containers/WalletsView/style.scss
+++ b/app/js/containers/WalletsView/style.scss
@@ -2,10 +2,7 @@
 
 .container {
   display: flex;
-  flex-grow: 1;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .category {
@@ -19,8 +16,18 @@
 }
 
 .balances {
+  flex: 1 1 100%;
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
+}
+
+.content {
+  flex: 1 1 100%;
+}
+
+.actionsContainer{
+  flex: 0 0 100%;
 }
