--- a/app/js/containers/TopBar/style.scss
+++ b/app/js/containers/TopBar/style.scss
@@ -10,6 +10,7 @@
   flex-grow: 1;
   flex-direction: row;
   justify-content: space-between;
+  background-color: rgba($c-dark, 0.7);
 }
 
 .text {
@@ -28,7 +29,7 @@
     height: 14px;
     width: 14px;
     vertical-align: middle;
-    padding: 8px;
+    margin: 8px;
   }
 }
 
@@ -41,7 +42,7 @@
   cursor: pointer;
   composes: text;
   line-height: 34px;
-  margin-right: 10px;
+  text-transform: uppercase;
 }
 
 .signin {
@@ -50,6 +51,7 @@
 }
 
 .userIcon {
+  margin-left: 10px;
   height: 34px;
   width: 34px;
   vertical-align: middle;
