--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,6 +24,7 @@ input[type="number"]
   margin: 0;
   appearance: none;
   box-shadow: none;
+  border: none;
   border-radius: none;
   box-sizing: border-box;
 }
