--- a/app/js/components/ui/Loader/style.scss
+++ b/app/js/components/ui/Loader/style.scss
@@ -3,11 +3,12 @@
 $loader-color: $c-white;
 
 .spinner {
-  margin: 100px auto;
-  width: 50px;
-  height: 40px;
+  padding: 30px;
+  width: 130px;
+  height: 110px;
   text-align: center;
   font-size: 10px;
+  margin: auto;
 }
 
 .spinner > div {
