--- a/app/js/containers/LoginView/style.scss
+++ b/app/js/containers/LoginView/style.scss
@@ -20,6 +20,10 @@
   font-size: 0.6rem;
   color: $c-green;
 }
+.register {
+  font-size: 0.7rem;
+  margin: 15px 0;
+}
 .loading {
   font-size: 0.6rem;
   text-align: center;
