--- a/app/js/containers/TopBar/style.scss
+++ b/app/js/containers/TopBar/style.scss
@@ -10,7 +10,7 @@
   flex-grow: 1;
   flex-direction: row;
   justify-content: space-between;
-  background-color: rgba($c-dark, 0.7);
+  background: linear-gradient(to bottom, $c-dark 0%, $c-dark 30%, rgba($c-dark,0.5) 70%, rgba(0,0,0,0) 100%);;
 }
 
 .text {
