--- a/app/styles/_attributes.scss
+++ b/app/styles/_attributes.scss
@@ -1,3 +1,12 @@
+// Sizes
+
+$header-height: 60px;
+$footer-height: 60px;
+$horizontal-padding: 50px;
+$vertical-padding: 20px;
+
+$content-height: calc(100vh - #{$header-height} - 2*#{$vertical-padding});
+
 // Colors
 $c-dark: #27272D;
 $c-white: #FFF;
