--- a/app/js/containers/RegisterView/style.scss
+++ b/app/js/containers/RegisterView/style.scss
@@ -3,8 +3,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: stretch;
+  width: 300px;
 }
 
 .message {
