--- a/app/js/components/ui/OperationButton/style.scss
+++ b/app/js/components/ui/OperationButton/style.scss
@@ -10,7 +10,7 @@
   height: 40px;
   min-width: 120px;
   font-size: 0.7rem;
-  margin: 8px;
+  margin: 20px 15px;
   background-color: $c-white;
   color: $c-dark;
 
