--- a/app/js/containers/LoginView/style.scss
+++ b/app/js/containers/LoginView/style.scss
@@ -25,7 +25,8 @@
 }
 .register {
   font-size: 0.7rem;
-  margin: 15px 0;
+  margin-top: 25px;
+  margin-bottom: 0;
   text-align: center;
 }
 .loading {
