--- a/app/js/containers/ReceiveComponent/style.scss
+++ b/app/js/containers/ReceiveComponent/style.scss
@@ -9,3 +9,15 @@
   width: 400px;
   margin: 50px auto;
 }
+
+.choose {
+  font-size: 0.8rem;
+  text-align: center;
+}
+.asset {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
+}
