--- a/app/js/containers/LoginView/style.scss
+++ b/app/js/containers/LoginView/style.scss
@@ -8,7 +8,7 @@
 
   align-items: stretch;
   width: 300px;
-  margin: 50px auto;
+  margin: 30px auto;
 }
 
 .btn {
@@ -33,4 +33,11 @@
   font-size: 0.6rem;
   text-align: center;
   color: $c-white;
+}
+
+.title {
+  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 15px;
 }
