--- a/app/js/components/views/WelcomeView/style.scss
+++ b/app/js/components/views/WelcomeView/style.scss
@@ -27,6 +27,10 @@
   text-align: center;
 }
 
+.bottomText {
+  margin-top: 100px;
+  font-size: 0.8em;
+}
 .gotoContainer {
   display: flex;
   flex-grow: 0;
