--- a/app/js/components/views/AboutView/style.scss
+++ b/app/js/components/views/AboutView/style.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .titleContainer {
@@ -11,7 +13,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 3rem;
+  margin-top: 0.4rem;
   margin-bottom: 3rem;
 
   .title {
@@ -27,8 +29,30 @@
 .description {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: stretch;
+  max-width: 700px;
   .text {
     font-size: 0.8rem;
     text-align: center;
   }
+}
+
+h1 {
+  font-size: 1.2em;
+  color: darken($c-white, 30%);
+  margin-left: 1rem;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 0.8em;
+  color: $c-white;
+  text-align: justify;
+  line-height: 1.1rem;
+}
+
+a {
+  display: block;
+  text-align: center;
 }
