--- a/app/js/components/ui/OperationButton/style.scss
+++ b/app/js/components/ui/OperationButton/style.scss
@@ -16,6 +16,11 @@
 
   border: 0 solid $c-dark;
 
+  &.disabled {
+    opacity: 0.7;
+    cursor: default;
+  }
+
   &.primary {
     background-color: $c-rose;
     color: $c-dark;
@@ -37,4 +42,8 @@
     }
   }
 
+  transition: opacity .3s ease;
+  &:hover {
+    opacity: 0.7;
+  }
 }
