--- a/app/js/containers/SendComponent/style.scss
+++ b/app/js/containers/SendComponent/style.scss
@@ -6,6 +6,6 @@
   justify-content: center;
 
   align-items: stretch;
-  width: 400px;
-  margin: 50px auto;
+  max-width: 400px;
+  margin: 10px auto;
 }
