--- a/app/js/containers/ExchangeComponent/style.scss
+++ b/app/js/containers/ExchangeComponent/style.scss
@@ -6,8 +6,8 @@
   justify-content: center;
 
   align-items: stretch;
-  width: 400px;
-  margin: 50px auto;
+  max-width: 400px;
+  margin: 10px auto;
 }
 
 .row {
