Disable source amount on exchange

--- a/app/js/components/views/AboutView/style.scss
+++ b/app/js/components/views/AboutView/style.scss
@@ -52,6 +52,13 @@
   line-height: 1.1rem;
 }
 
+.warning {
+  font-size: 0.8em;
+  color: #fb9b9b;
+  text-align: justify;
+  line-height: 1.1rem;
+}
+
 .a {
   text-align: center;
 }
