--- a/app/styles/_attributes.scss
+++ b/app/styles/_attributes.scss
@@ -14,6 +14,7 @@ $c-grey: #dcc7da;
 $c-rose: #E36DBE;
 $c-red: #d6114d;
 $c-green: #25cf41;
+$c-orange: #ce6104;
 
 $c-c-eth: #92CDFF;
 $c-c-btc: #FFCC66;
