--- a/app/js/components/ui/BottomBar/style.scss
+++ b/app/js/components/ui/BottomBar/style.scss
@@ -11,8 +11,10 @@
   justify-content: flex-end;
   align-items: center;
   padding: 15px;
+  margin-right: 40px;
 
   a {
     font-size: 0.6rem;
+    margin-left: 40px;
   }
 }
