--- a/app/js/components/ui/AssetIcon/style.scss
+++ b/app/js/components/ui/AssetIcon/style.scss
@@ -19,3 +19,12 @@
 .symbol-ETH {
   background-color: $c-c-eth;
 }
+.symbol-EUR {
+  background-color: $c-c-eur;
+}
+.symbol-GNO {
+  background-color: $c-c-gno;
+}
+.symbol-HNQ {
+  background-color: $c-c-hnq;
+}
