--- a/app/styles/_attributes.scss
+++ b/app/styles/_attributes.scss
@@ -8,16 +8,19 @@ $vertical-padding: 20px;
 $content-height: calc(100vh - #{$header-height} - 2*#{$vertical-padding});
 
 // Colors
-$c-dark: #27272D;
-$c-white: #FFF;
+$c-dark: #FFF;
+$c-white: #27272D;
 $c-grey: #dcc7da;
 $c-rose: #E36DBE;
 $c-red: #d6114d;
 $c-green: #25cf41;
 $c-orange: #ce6104;
 
-$c-c-eth: #92CDFF;
-$c-c-btc: #FFCC66;
+$c-c-eth: #5fb0f5;
+$c-c-btc: #eaaf39;
+$c-c-eur: #ea6cb2;
+$c-c-gno: #2ab028;
+$c-c-hnq: #4e66ea;
 
 // Shades
 
