--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,6 +22,7 @@ a:hover {
 p {
   font-family: $f-secondary;
   font-size: 0.9em;
+  color: $c-white;
 }
 input[type="text"],
 input[type="password"],
