--- a/app/js/containers/RegisterView/style.scss
+++ b/app/js/containers/RegisterView/style.scss
@@ -11,6 +11,11 @@
   margin: 30px auto;
 }
 
+.containerDisabled {
+  composes: container;
+  align-items: center;
+}
+
 .message {
   font-size: 0.8em;
   text-align: center;
@@ -30,6 +35,14 @@
 
 .title {
   font-size: 1.5rem;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+.disabled {
+  color: $c-red;
+  font-size: 1rem;
   text-align: center;
   margin-top: 0;
   margin-bottom: 15px;
