Draft to register with existing seed

--- a/app/js/containers/RegisterView/style.scss
+++ b/app/js/containers/RegisterView/style.scss
@@ -47,3 +47,13 @@
   margin-top: 0;
   margin-bottom: 15px;
 }
+
+.seedWarning {
+  border: 1px solid #c50404;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: rgba(175, 35, 49, 0.35);
+
+  font-weight: 200;
+  font-size: 0.8rem;
+}
