untrusted assets draft

--- a/app/js/containers/TrustableAsset/style.scss
+++ b/app/js/containers/TrustableAsset/style.scss
@@ -6,12 +6,11 @@
   margin: 10px;
 }
 
-.amount {
+.add {
   font-size: 1.5rem;
   color: $c-white;
   line-height: 50px;
 }
-
 .code {
   line-height: 50px;
   width: 50px;
