--- a/app/styles/_attributes.scss
+++ b/app/styles/_attributes.scss
@@ -15,7 +15,7 @@ $c-rose: #E36DBE;
 $c-red: #d6114d;
 $c-green: #25cf41;
 $c-orange: #ce6104;
-
+$c-light: #bfbfbf;
 $c-c-eth: #92CDFF;
 $c-c-btc: #FFCC66;
 
