Update stellar-toolkit and fix set password

--- a/app/js/containers/ChangePassword/style.scss
+++ b/app/js/containers/ChangePassword/style.scss
@@ -22,7 +22,9 @@
   font-size: 0.7rem;
   text-align: center;
   display: block;
+  padding-top: 20px;
 }
+
 .messageSuccess {
   composes: message;
   color: $c-green;
