--- a/app/js/components/ui/Separator/style.scss
+++ b/app/js/components/ui/Separator/style.scss
@@ -4,6 +4,7 @@
   padding-bottom: 15px;
   border-bottom: 1px solid $c-white;
   width: 100%;
+  margin-top: 15px;
   .text {
     font-size: 1.5rem;
     color: $c-white;
