--- a/app/styles/_attributes.scss
+++ b/app/styles/_attributes.scss
@@ -5,6 +5,8 @@ $footer-height: 60px;
 $horizontal-padding: 50px;
 $vertical-padding: 20px;
 
+$s-width: 600px;
+
 $content-height: calc(100vh - #{$header-height} - 2*#{$vertical-padding});
 
 // Colors
