--- a/app/js/components/ui/OperationButton/style.scss
+++ b/app/js/components/ui/OperationButton/style.scss
@@ -1,20 +1,23 @@
 @import '~styles/attributes';
 
 .container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5rem;
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 20px 15px;
   border-radius: 25px;
   cursor: pointer;
   height: 40px;
   min-width: 120px;
   font-size: 0.7rem;
-  margin: 20px 15px;
+  text-align: center;
   background-color: $c-white;
   color: $c-dark;
 
-  border: 0 solid $c-dark;
+  border: 2px solid $c-dark;
+
+  &.fluid {
+    display: block;
+  }
 
   &.disabled {
     opacity: 0.7;
@@ -25,13 +28,13 @@
     background-color: $c-rose;
     color: $c-dark;
 
-    border: 0 solid $c-dark;
+    border: 2px solid $c-dark;
   }
   &.secondary {
     background-color: $c-orange;
     color: $c-dark;
 
-    border: 0 solid $c-dark;
+    border: 2px solid $c-dark;
   }
 
   &.activated {
