--- a/app/styles/_attributes.scss
+++ b/app/styles/_attributes.scss
@@ -15,7 +15,9 @@ $c-white: #FFF;
 $c-grey: #dcc7da;
 $c-rose: #E36DBE;
 $c-red: #d6114d;
+$c-red-l: #f55988;
 $c-green: #25cf41;
+$c-green-l: #69d87c;
 $c-orange: #ce6104;
 $c-light: #bfbfbf;
 $c-c-eth: #92CDFF;
