--- a/app/js/components/views/WelcomeView/style.scss
+++ b/app/js/components/views/WelcomeView/style.scss
@@ -14,7 +14,7 @@
 }
 
 .title {
-  font-size: 10rem;
+  font-size: 24vw;
   @include noselect();
 }
 .alpha {
@@ -22,7 +22,7 @@
   top: 14px;
   right: -33px;
   font-family: $f-secondary;
-  font-size: 0.9rem;
+  font-size: 4vw;
   color: $c-green;
   text-transform: uppercase;
   @include noselect();
@@ -30,7 +30,7 @@
 
 .subtitle {
   @include noselect();
-  font-size: 2rem;
+  font-size: 5vw;
   font-family: $f-secondary;
   color: $c-rose;
   text-align: center;
