--- a/app/js/containers/LoginView/style.scss
+++ b/app/js/containers/LoginView/style.scss
@@ -7,7 +7,7 @@
   justify-content: center;
 
   align-items: stretch;
-  width: 300px;
+  max-width: 300px;
   margin: 30px auto;
 }
 
@@ -60,6 +60,8 @@
   margin-bottom: 5px;
   margin-top: 5px;
   padding-top: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .separator {
