--- a/app/js/containers/WalletsView/style.scss
+++ b/app/js/containers/WalletsView/style.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   min-height: $content-height;
+  align-items: center;
 }
 
 .balances {
@@ -17,6 +18,7 @@
 
 .content {
   flex: 1 1 100%;
+  max-width: $s-width;
 }
 
 .actionsContainer{
