--- a/app/styles/_attributes.scss
+++ b/app/styles/_attributes.scss
@@ -2,12 +2,16 @@
 
 $header-height: 60px;
 $footer-height: 60px;
-$horizontal-padding: 50px;
+$horizontal-padding: 10px;
 $vertical-padding: 20px;
 
 $s-width: 600px;
 
 $content-height: calc(100vh - #{$header-height} - 2*#{$vertical-padding});
+
+
+$s-line-sm: 30px;
+$s-line-md: 50px;
 
 // Colors
 $c-dark: #27272D;
