--- a/app/js/containers/OperationView/style.scss
+++ b/app/js/containers/OperationView/style.scss
@@ -3,6 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 
@@ -20,6 +21,8 @@
 }
 
 .actionsContainer{
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   flex: 0 0 100%;
+  width: 100%;
+  max-width: 400px;
 }
