--- a/app/js/containers/WalletsView/style.scss
+++ b/app/js/containers/WalletsView/style.scss
@@ -22,13 +22,15 @@
 }
 
 .actionsContainer{
-  margin-top: 30px;
   flex: 0 0 100%;
+  width: 100%;
+  max-width: 400px;
 }
 
 .alertC {
   border: 1px solid #c50404;
   border-radius: 5px;
+  margin-top: 30px;
   padding: 10px;
   background-color: rgba(175, 35, 49, 0.35);
   p {
