Set currency type with qr code

--- a/app/js/containers/SendComponent/style.scss
+++ b/app/js/containers/SendComponent/style.scss
@@ -13,6 +13,11 @@
 .scanIntent {
   text-align: center;
   cursor: pointer;
+  margin: 15px;
+}
+
+.qrIcon {
+  margin-right: 10px;
 }
 
 .qrContainer {
@@ -24,4 +29,8 @@
 
 .videoContainer {
   width: 70%;
+}
+
+.pleaseScan {
+  margin: 15px;
 }
