--- a/app/js/containers/SendComponent/style.scss
+++ b/app/js/containers/SendComponent/style.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
-  align-items: stretch;
   max-width: 400px;
   margin: 10px auto;
 }
